--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "server": "node_modules/.bin/webpack-dev-server",
+    "server": "node_modules/.bin/webpack-dev-server -d",
     "start": "npm run server",
     "build": "rimraf dist && cross-env NODE_ENV=production webpack --config config/webpack.prod.js --progress --profile --bail",
     "build:staging": "rimraf dist && cross-env NODE_ENV=staging webpack --config config/webpack.prod.js --progress --profile --bail",
@@ -47,23 +47,29 @@
     "url-loader": "latest",
     "webpack": "latest",
     "webpack-dev-server": "latest",
-    "webpack-merge": "latest"
+    "webpack-merge": "latest",
+    "y": "^0.2.0"
   },
   "dependencies": {
     "@angular-redux/form": "latest",
     "@angular-redux/router": "latest",
     "@angular-redux/store": "latest",
     "@angular/animations": "latest",
+    "@angular/cdk": "^5.0.3",
     "@angular/common": "latest",
     "@angular/compiler": "latest",
     "@angular/compiler-cli": "latest",
     "@angular/core": "latest",
     "@angular/forms": "latest",
     "@angular/http": "latest",
+    "@angular/material": "latest",
     "@angular/platform-browser": "latest",
     "@angular/platform-browser-dynamic": "latest",
     "@angular/platform-server": "latest",
     "@angular/router": "latest",
+    "@ngrx/effects": "latest",
+    "@ngrx/router-store": "latest",
+    "@ngrx/store": "latest",
     "angular2-cookie": "latest",
     "canvas-toBlob": "latest",
     "events-polyfill": "latest",
@@ -71,6 +77,7 @@
     "font-awesome": "latest",
     "hammerjs": "latest",
     "intl": "latest",
+    "ngrx-store-freeze": "latest",
     "redux": "latest",
     "redux-logger": "latest",
     "redux-observable": "latest",
