Removed unuseful packages.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "latest",
-    "@types/redux-logger": "latest",
     "a1atscript": "latest",
     "angular2-template-loader": "latest",
     "autoprefixer": "latest",
@@ -47,21 +46,16 @@
     "url-loader": "latest",
     "webpack": "latest",
     "webpack-dev-server": "latest",
-    "webpack-merge": "latest",
-    "y": "^0.2.0"
+    "webpack-merge": "latest"
   },
   "dependencies": {
-    "@angular-redux/form": "latest",
-    "@angular-redux/router": "latest",
-    "@angular-redux/store": "latest",
     "@angular/animations": "latest",
-    "@angular/cdk": "^5.0.3",
+    "@angular/cdk": "latest",
     "@angular/common": "latest",
     "@angular/compiler": "latest",
     "@angular/compiler-cli": "latest",
     "@angular/core": "latest",
     "@angular/forms": "latest",
-    "@angular/http": "latest",
     "@angular/material": "latest",
     "@angular/platform-browser": "latest",
     "@angular/platform-browser-dynamic": "latest",
@@ -73,14 +67,10 @@
     "angular2-cookie": "latest",
     "canvas-toBlob": "latest",
     "events-polyfill": "latest",
-    "flux-standard-action": "latest",
     "font-awesome": "latest",
     "hammerjs": "latest",
     "intl": "latest",
     "ngrx-store-freeze": "latest",
-    "redux": "latest",
-    "redux-logger": "latest",
-    "redux-observable": "latest",
     "rxjs": "latest",
     "zone.js": "latest"
   },
