Added angular language service.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@angular/language-service": "latest",
     "@types/node": "latest",
     "a1atscript": "latest",
     "angular2-template-loader": "latest",
