--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "hammerjs": "latest",
     "intl": "latest",
     "ngrx-store-freeze": "latest",
+    "ngx-quill": "latest",
     "rxjs": "latest",
     "zone.js": "latest"
   },
